cmake_minimum_required(VERSION 2.8)

project (DataStructure)

# add_executable(SingleLinkList LinearList/SingleLinkList.cpp)
# add_executable(LoopSingleLinkList LinearList/LoopSingleLinkList.cpp)
# add_executable(DoubleLinkList LinearList/DoubleLinkList.cpp)
# add_executable(LoopDoubleLinkList LinearList/LoopDoubleLinkList.cpp)
# add_executable(Stack LinearList/Stack.cpp)
# add_executable(Queue LinearList/Queue_1.cpp)
# add_executable(Queue LinearList/Queue_2.cpp)
# add_executable(CircularQueue LinearList/CircularQueue.cpp)
add_executable(ForceMatch ForceMatch.cpp)
# add_executable(test1 test.cpp)
